<?xml version="1.0"?>
<package format="3">
  <name>fast_lio</name>
  <version>1.0.0</version>
  <description>
    Unified FAST-LIO package combining:
    - SLAM: Tightly-coupled LiDAR-inertial odometry using iterated Kalman filter and ikd-Tree
    - Localization: Map-based localization using Open3D ICP registration
  </description>

  <maintainer email="dev@livoxtech.com">Livox</maintainer>
  <license>BSD</license>

  <author email="zhangji@cmu.edu">Ji Zhang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Common ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>common_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <!-- SLAM specific -->
  <depend>std_srvs</depend>
  <depend>livox_driver</depend>

  <!-- Localization specific -->
  <depend>tf2_eigen</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
